--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -17,5 +17,4 @@
   ~
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.jakewharton.disklrucache"/>
+<manifest package="com.jakewharton.disklrucache" />
